dealer card alignment fixed

--- a/style.css
+++ b/style.css
@@ -43,7 +43,8 @@ min-height: 470px;
 border: solid black;
 text-align: left;
 background-color: #344441;
-margin-bottom: 10px;right: 0px;
+margin-bottom: 10px;
+right: 0px;
 }
 
 #dealer-deck {
